--- a/src/Styles/GenreFilter.css
+++ b/src/Styles/GenreFilter.css
@@ -1,4 +1,13 @@
+.genre-filter-wrapper {
+font-size: 35px;
+  width: max-content;
+  margin: 40px auto;
+}
+
 .drop-down {
-    border: 1px solid black;
-    margin: auto 5px;
+  border: 1px solid black;
+  margin: auto 15px;
+  height: 60px;
+  width: 200px;
+  font-size: 25px;
 }
