--- a/src/Styles/RandomPicks.css
+++ b/src/Styles/RandomPicks.css
@@ -1,20 +1,14 @@
-/* .random-pick-main {
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-} */
-
 .title {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: baseline;
+  text-align: center;
   margin: 0 auto;
-  width: 215px;
+  width: 300px;
   font-size: 20px;
+  padding: 15px;
 }
 
 .title small {
   font-size: 0.6em;
+  /* margin-left: 5px; */
 }
 
 .random-pick-main-wrapper {
@@ -26,4 +20,21 @@
 
 .details {
   max-width: 400px;
+  padding: 5px 15px;
+}
+
+.director,
+.actor,
+.runtime,
+.genres,
+.plot {
+  margin-bottom: 10px;
+}
+
+.genres ul {
+  margin: 0;
+}
+
+.genres li {
+  padding: 5px;
 }
