--- a/src/Styles/AllMovies.css
+++ b/src/Styles/AllMovies.css
@@ -53,3 +53,9 @@ h2 {
   transition-duration: 0.6s;
   background-color: rgb(80, 112, 76);
 }
+
+.filter-empty-message {
+  font-size: 55px;
+  width: max-content;
+  margin: 50px auto;
+}
