--- a/src/App.css
+++ b/src/App.css
@@ -18,9 +18,9 @@ nav {
   text-decoration: none;
   color: white;
   font-size: 55px;
+  transition: all 0.3s ease-in-out;
 }
 
 .link:hover {
-  transition-duration: 0.2s;
   color: rgb(80, 112, 76);
 }
