--- a/src/Styles/RandomPicks.css
+++ b/src/Styles/RandomPicks.css
@@ -1,8 +1,11 @@
+.random-pick-main {
+  margin: 0 30px;
+  font-size: 80px;
+}
+
 .title {
   text-align: center;
-  margin: 40px auto;
-  width: max-content;
-  font-size: 65px;
+  margin: 40px 20px;
   padding: 15px;
 }
 
@@ -18,18 +21,17 @@
 }
 
 .img-container {
-  width: 800px;
+  width: 900px;
 }
 
 img {
   width: 100%;
-  font-size: 25px;
 }
 
 .details {
   max-width: 800px;
   padding: 5px 15px;
-  font-size: 50px;
+  font-size: 0.7em;
 }
 
 .director,
@@ -42,6 +44,8 @@ img {
 
 .genres ul {
   margin: 0;
+  padding: 0 0 0 1em;
+  list-style-type: circle;
 }
 
 .genres li {
