--- a/src/Styles/AllMovies.css
+++ b/src/Styles/AllMovies.css
@@ -30,7 +30,7 @@ h2 {
 /* each movie title */
 .each-movie strong {
   margin: 5px;
-  font-size: 45px;
+  font-size: 1.35em;
 }
 
 .each-movie button {
@@ -38,9 +38,9 @@ h2 {
   justify-content: center;
   color: white;
   margin: 15px auto;
-  height: 100px;
-  width: 220px;
-  font-size: 30px;
+  height: 3.2em;
+  width: 6.6em;
+  font-size: 0.9em;
   border-radius: 40px;
   border: 2px solid rgb(80, 112, 76);
   background-color: rgb(88, 168, 119);
