--- a/src/Styles/GenreFilter.css
+++ b/src/Styles/GenreFilter.css
@@ -7,7 +7,7 @@
 .drop-down {
   border: 1px solid black;
   margin: auto 15px;
-  height: 80px;
-  width: 230px;
-  font-size: 40px;
+  height: 2.1em;
+  width: 5.7em;
+  font-size: 0.9em;
 }
