--- a/src/Styles/RandomPicks.css
+++ b/src/Styles/RandomPicks.css
@@ -1,5 +1,5 @@
 .random-pick-main {
-  margin: 0 30px;
+  margin: 0 20px;
   font-size: 80px;
 }
 
@@ -22,6 +22,7 @@
 
 .img-container {
   width: 900px;
+  margin-right: 8px;
 }
 
 img {
@@ -32,6 +33,7 @@ img {
   max-width: 800px;
   padding: 5px 15px;
   font-size: 0.7em;
+  margin-left: 8px;
 }
 
 .director,
