--- a/src/Styles/media-queries.css
+++ b/src/Styles/media-queries.css
@@ -188,7 +188,7 @@
     column-gap: 3px;
   }
   .link {
-    font-size: 16px;
+    font-size: 15px;
   }
   h2 {
     font-size: 26px;
@@ -204,5 +204,8 @@
   }
   .genres ul {
     padding: 0 0 0 1.3em;
+  }
+  .img-container {
+    width: 270px;
   }
 }
