--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
 nav {
   display: grid;
   grid-template-columns: 33% 33% 33%;
-  grid-column-gap: 15px;
   justify-items: center;
   padding: 50px 40px;
   background-image: linear-gradient(to bottom, rgb(80, 112, 76) 20%, #0f1412);
@@ -21,6 +20,7 @@ nav {
   color: white;
   font-size: 60px;
   transition: all 0.3s ease-in-out;
+  padding: 0 15px;
 }
 
 h1 {
@@ -30,5 +30,4 @@ h1 {
 .link:hover {
   color: rgb(80, 112, 76);
 }
-
 
