--- a/src/Styles/media-queries.css
+++ b/src/Styles/media-queries.css
@@ -1,103 +1,122 @@
-@media (max-width: 3000px) {
+@media (max-width: 1000px) {
   .link {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    font-size: 25px;
   }
   h1 {
-    margin: 0;
-  }
-  .movie-wrapper {
-    grid-template-columns: repeat(auto-fill, minmax(485px, 1fr));
-  }
-  .each-movie {
-    font-size: 28px;
-  }
-  .random-pick-main {
-    font-size: 70px;
-  }
-}
-
-@media (max-width: 1618px) {
-  .link {
-    font-size: 50px;
-  }
-  .movie-wrapper {
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  }
-  .each-movie {
-    font-size: 26px;
-  }
-}
-
-@media (max-width: 1340px) {
-  .link {
-    font-size: 40px;
+    margin: 7px;
   }
   h2 {
-    font-size: 45px;
-  }
-  .each-movie {
-    font-size: 24px;
-  }
-  .filter-empty-message {
-    font-size: 40px;
-  }
-  .genre-filter-wrapper {
-    font-size: 35px;
-  }
-  .random-pick-main {
-    font-size: 50px;
-  }
-  .img-container {
-    width: 700px;
-  }
-}
-
-@media (max-width: 1000px) {
-  nav {
-    padding: 40px 30px;
-  }
-  .link {
-    font-size: 35px;
-  }
-  .favourites-container {
-    margin-bottom: 60px;
-  }
-  .movie-wrapper {
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-  }
-  .each-movie {
-    font-size: 22px;
-  }
-  .random-pick-main {
-    font-size: 40px;
-  }
-}
-
-@media (max-width: 840px) {
-  .link {
     font-size: 30px;
   }
-  h2 {
-    font-size: 35px;
-    margin: 30px auto;
-  }
   .movie-wrapper {
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   }
   .each-movie {
-    font-size: 21px;
+    font-size: 14px;
+  }
+  .genre-filter-wrapper {
+    font-size: 18px;
+  }
+  .drop-down {
+    margin: auto 10px;
   }
   .filter-empty-message {
     font-size: 25px;
     margin: 30px;
   }
+  .random-pick-main {
+    font-size: 35px;
+  }
+}
+
+@media (max-width: 810px) {
+  .link {
+    font-size: 20px;
+  }
+  h1 {
+    margin: 5px;
+  }
+  h2 {
+    font-size: 25px;
+  }
+  .movie-wrapper {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  }
+  .each-movie {
+    font-size: 12px;
+  }
   .genre-filter-wrapper {
+    font-size: 16px;
+  }
+  .filter-empty-message {
+    font-size: 22px;
+  }
+  .random-pick-main {
     font-size: 30px;
   }
 }
 
+@media (max-width: 650px) {
+  .link {
+    font-size: 17px;
+  }
+  h2 {
+    font-size: 21px;
+  }
+  .movie-wrapper {
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  }
+  .each-movie {
+    font-size: 11px;
+  }
+  .genre-filter-wrapper {
+    font-size: 14px;
+  }
+  .filter-empty-message {
+    font-size: 20px;
+    margin: 20px;
+  }
+  .random-pick-main {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 550px) {
+  nav {
+    padding: 10px 20px;
+  }
+  .home {
+    margin-bottom: 18px;
+  }
+  .link {
+    display: block;
+    line-height: 100%;
+    /* text-align: center; */
+  }
+  .random-pick-main {
+    margin: 0 10px;
+    font-size: 22px;
+  }
+  .title {
+    text-align: center;
+    margin: 10px 0 5px 0;
+    padding: 15px;
+  }
+  .details {
+    padding: 5px;
+  }
+}
+
+@media (max-width: 390px) {
+  .movie-wrapper {
+    grid-template-columns: repeat(auto-fill, minmax(148px, 1fr));
+  }
+  .random-pick-main {
+    font-size: 20px;
+  }
+}
+
+/*
 @media (max-width: 700px) {
   nav {
     padding: 30px 20px;
@@ -208,4 +227,4 @@
   .img-container {
     width: 270px;
   }
-}
+} */
