app will now remove any movies that dont have working image link and render all movies with their poster - will also remove any genres that the new movies list does not include

--- a/src/Styles/AllMovies.css
+++ b/src/Styles/AllMovies.css
@@ -6,7 +6,7 @@ h2 {
 }
 
 .favourites-container {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 /* each movie displayed in grid structure */
@@ -21,6 +21,7 @@ h2 {
 /* structure of each individual movie */
 .each-movie {
   display: flex;
+  align-items: center;
   flex-direction: column;
   margin: 15px auto;
   text-align: center;
@@ -31,6 +32,13 @@ h2 {
 .each-movie strong {
   margin: 5px;
   font-size: 1.35em;
+}
+
+.each-movie-poster {
+  background-position: cover; 
+  background-size: cover;
+  height: 450px;
+  width: 300px;
 }
 
 .each-movie button {
@@ -53,8 +61,6 @@ h2 {
 .each-movie button:hover {
   background-color: rgb(80, 112, 76);
 }
-
-
 
 /* message shown when a genre selected but no movies in associated array */
 .filter-empty-message {
